# TextUI

./: AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  sample_markup.xml  test_markup.py
examples/: sample_markup.xml
tests/: conftest.py  test_script_node.py  test_style_tags.py  test_validate_css.py
textui/: builtin_widgets.py  document.py  element_widget_definition.py  html_widgets.py  sample_markup.xml  textui.py  validate_css.py  widget_factory.py
textui/defs/: element_widget_definition.py  html_defs.py
textui/widgets/: builtin_widgets.py  html_widgets.py  widget_factory.py
