[tool.poetry]
name = "textui"
version = "0.1.0"
description = ""
authors = ["thunderballfists <apb@beihl.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.19.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

